<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1e88e5"
    tools:context="br.com.edu.unirp.android.findpetwalker.InserirActivity">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textColor="#ff9c00"
            android:textSize="9pt"/>

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endereco"
            android:textColor="#ff9c00"
            android:textSize="9pt"/>

        <EditText
            android:id="@+id/edtEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cidade"
            android:textColor="#ff9c00"
            android:textSize="9pt"/>

        <EditText
            android:id="@+id/edtCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:textColor="#ff9c00"
            android:textSize="9pt"/>

        <EditText
            android:id="@+id/edtTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#ff9c00"
            android:textSize="9pt"/>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@android:color/background_light"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:textColor="#ff9c00"
            android:textSize="9pt"/>

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@android:color/background_light"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Salvar"
        android:layout_marginTop="30dp"
        android:id="@+id/btnSalvar"
        />
</LinearLayout>



